@@ -1,9 +1,8 @@
 # Tests for Log::Log4perl::Filter::CallerMatch
-# (c) Patrick Donelan, 2008
 
 use warnings;
 use strict;
-use Test::More tests => 13;
+use Test::More tests => 16;
 use Log::Log4perl;
 use Log::Log4perl::Filter::CallerMatch;
 
@@ -164,6 +163,41 @@ END_CONFIG
     
     nested_curry_outer($logger);
     like( $buffer->buffer(), qr/curry/, '..but found when Min/Max includes target range' );
+    end($buffer);
+}
+
+# With Bool
+{
+    my $config = <<END_CONFIG;
+    log4perl.logger = ALL, A1
+    log4perl.appender.A1        = Log::Log4perl::Appender::TestBuffer
+    log4perl.appender.A1.Filter = f3
+    log4perl.appender.A1.layout = Log::Log4perl::Layout::SimpleLayout
+    
+    log4perl.filter.f1 = Log::Log4perl::Filter::CallerMatch
+    log4perl.filter.f1.StringToMatch  = curry
+    
+    log4perl.filter.f2 = Log::Log4perl::Filter::LevelRange
+    log4perl.filter.f2.LevelMin  = WARN
+    
+    log4perl.filter.f3 = Log::Log4perl::Filter::Boolean
+    log4perl.filter.f3.logic = f1 || f2
+END_CONFIG
+    
+    Log::Log4perl->init(\$config);
+    my $buffer = Log::Log4perl::Appender::TestBuffer->by_name("A1");
+    my $logger = Log::Log4perl->get_logger("Some.Where");
+    
+    $logger->info('curry');
+    like( $buffer->buffer(), qr/curry/, 'Bool did not block us' );
+    $buffer->buffer("");
+    
+    $logger->warn('porridge');
+    like( $buffer->buffer(), qr/porridge/, 'Got through via LevelRange' );
+    $buffer->buffer("");
+    
+    $logger->debug('soup');
+    is( $buffer->buffer(), q{}, 'Nothing got through' );    
     end($buffer);
 }
 
