@@ -1,10 +1,11 @@
 Revision history for Log-Log4perl-Filter-CallerMatch
 
 {{$NEXT}}
+    Improved tests
 
 1.100830  2010-03-24 14:48:48 EST5EDT
-        Switched to Dist::Zilla
+    Switched to Dist::Zilla
         
 0.01    Date/time
-        First version, released on an unsuspecting world.
+    First version, released on an unsuspecting world.
 
